# mini-rag

./: 1_ingestion_pipeline.py  2_retrieval_pipeline.py  3_history_aware_answer.py  4_semantic_chunking.py  5_agentic_chunking.py  6_multi_query_retrieval.py  7_hybrid_search.ipynb  8_reranker.ipynb  README.md  main.py  multi-modal-rag.ipynb  pyproject.toml
.ipynb_checkpoints/: 8_reranker-checkpoint.ipynb  multi-modal-rag-checkpoint.ipynb
db/chroma_db/: chroma.sqlite3
dbv1/chroma_db/: chroma.sqlite3
docs/: .~lock.Concept than Document.pdf#
